# bitrouter-ethglobal

./: Cargo.toml  pr_body.md  release-plz.toml  run_demo.sh  run_tests.sh
.github/workflows/: package.yml
apps/bitrouter/: Cargo.toml
apps/bitrouter/src/: assemble.rs  commands.rs  daemon.rs  error_report.rs  lib.rs  main.rs  paths.rs  tools.rs
apps/bitrouter/src/auth/: tests.rs
apps/bitrouter/src/db/migration/: m20240101_000004_add_ledger_receipt_columns.rs  mod.rs
apps/bitrouter/src/memory/: config.rs  mod.rs  scope_executor.rs
apps/bitrouter/src/metering/: db.rs  mod.rs  recorder.rs  store.rs  tests.rs
apps/bitrouter/src/metering/entities/: requests.rs
apps/bitrouter/src/policy/: hook.rs  mod.rs  policy.rs  store.rs  tests.rs
apps/bitrouter/src/subagent/: acp_client.rs  mod.rs  toolset.rs
apps/bitrouter/tests/: daemon.rs  e2e.rs
crates/bitrouter-attestation/src/: types.rs
crates/bitrouter-bedrock/src/: lib.rs
crates/bitrouter-chainlink/: Cargo.toml
crates/bitrouter-chainlink/examples/: bitrouter.db
crates/bitrouter-chainlink/src/: lib.rs  verifier.rs
crates/bitrouter-p2p/: Cargo.toml
crates/bitrouter-p2p/src/: lib.rs
crates/bitrouter-providers/: Cargo.toml
crates/bitrouter-providers/providers/: anthropic.toml  google.toml  openai.toml  opencode-go.toml  opencode-zen.toml  openrouter.toml
crates/bitrouter-providers/src/: apply.rs  builtin.rs  entry.rs  lib.rs
crates/bitrouter-sdk/: Cargo.toml
crates/bitrouter-sdk/src/: app.rs  caller.rs  error.rs  event.rs  lib.rs  metrics.rs  mpp.rs  server.rs
crates/bitrouter-sdk/src/acp/: config_routing.rs  mod.rs  stdio_executor.rs
crates/bitrouter-sdk/src/config/: mod.rs  pattern.rs  presets.rs  registry.rs  routing_table.rs  tests.rs
crates/bitrouter-sdk/src/language_model/: builder.rs  context.rs  executor.rs  hooks.rs  mod.rs  pipeline.rs  routing.rs  settlement.rs  stream.rs  tests.rs  types.rs
crates/bitrouter-sdk/src/language_model/protocol/: anthropic.rs  chat_completions.rs  generate_content.rs  google.rs  messages.rs  mod.rs  openai_chat.rs  openai_responses.rs  responses.rs  tests.rs
crates/bitrouter-sdk/src/language_model/server_tools/: config.rs
crates/bitrouter-sdk/src/mcp/: config_routing.rs  mod.rs  rmcp_executor.rs
crates/bitrouter-sdk/src/payment/: gate.rs
docs/: CONTRIBUTING.md
docs/ai-resources/: index.md  index.zh.md  llms-txt.md  llms-txt.zh.md  mcp.md  mcp.zh.md  skills.md  skills.zh.md
docs/concepts/: agents.md  agents.zh.md  models.md  models.zh.md
docs/features/: guardrails.md  guardrails.zh.md  model-variants.md  model-variants.zh.md  opentelemetry.md  opentelemetry.zh.md  presets.md  presets.zh.md  provider-selection.md  provider-selection.zh.md
docs/get-started/: installation.md  installation.zh.md  introduction.md  introduction.zh.md  managed-models.md  managed-models.zh.md  meta.json  models-and-providers.md  models-and-providers.zh.md  self-hosted-vs-cloud.md  self-hosted-vs-cloud.zh.md
docs/guides/: migrate-from-litellm.md  migrate-from-litellm.zh.md  migrate-from-tensorzero.md  migrate-from-tensorzero.zh.md  self-host.md  self-host.zh.md
docs/integrations/: claude-subscription.md  codex-subscription.md  models.md
docs/reference/: index.md
examples/subagent-demo/: bitrouter.demo.yaml  run_demo.sh
plugins/bitrouter-auth/: Cargo.toml
plugins/bitrouter-auth/src/: db.rs  events.rs  hook.rs  lib.rs  tests.rs
plugins/bitrouter-guardrails/: Cargo.toml
plugins/bitrouter-guardrails/src/: hooks.rs  lib.rs  rules.rs  tests.rs
plugins/bitrouter-observe/: Cargo.toml
plugins/bitrouter-observe/src/: lib.rs  otlp.rs  prometheus.rs
plugins/bitrouter-observe/src/otel/: exporter.rs  metrics.rs
plugins/bitrouter-pay/examples/: claude_code_demo.rs  payment_proxy.rs
plugins/bitrouter-pay/src/: lib.rs
plugins/bitrouter-pay/src/attester/: chainlink.rs
plugins/bitrouter-pay/src/gate/: mod.rs
plugins/bitrouter-pay/src/payment/: mod.rs  x402.rs
plugins/bitrouter-pay/src/wallet/: ows_signer.rs
plugins/bitrouter-pay/tests/: integration_test.rs
plugins/bitrouter-policy/: Cargo.toml
plugins/bitrouter-policy/src/: hook.rs  lib.rs  policy.rs  store.rs  tests.rs
plugins/bitrouter-settlement/: Cargo.toml
plugins/bitrouter-settlement/src/: balance.rs  bundle.rs  byok.rs  charge.rs  db.rs  events.rs  lib.rs  metrics_store.rs  mpp.rs  pricing.rs  recorder.rs  tests.rs
skills/bitrouter/: SKILL.md
skills/bitrouter/references/: mcp-memory.md  spawn-subagent.md
(+5 files in other folders)
