[package]
name = "bitrouter"
description = "BitRouter: an LLM API router. CLI + TUI + assembly library."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "bitrouter"
path = "src/lib.rs"

[[bin]]
name = "bitrouter"
path = "src/main.rs"

[dependencies]
bitrouter-sdk = { workspace = true, features = ["server", "config_file"] }
bitrouter-auth.workspace = true
bitrouter-policy.workspace = true
bitrouter-settlement.workspace = true
bitrouter-guardrails.workspace = true
bitrouter-observe.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
