[package]
name = "bitrouter-p2p"
description = "BitRouter P2P mesh (experimental). New in v1; v0 mainline had no p2p crate."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bitrouter-sdk.workspace = true
tracing.workspace = true

[features]
# Experimental; off by default. Enable to compile the (placeholder) mesh layer.
default = []
experimental = []
