[package]
name = "bitrouter-auth"
description = "BitRouter auth plugin: AuthHook, brvk_ virtual keys, users/api_keys tables"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bitrouter-sdk.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
base64.workspace = true
rand.workspace = true
hex.workspace = true
chrono.workspace = true
tracing.workspace = true
sqlx = { workspace = true, features = ["sqlite"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
