[package]
name = "bitrouter-observe"
description = "BitRouter observability plugin: ObserveHook implementations (Prometheus; OTLP behind feature)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bitrouter-sdk.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[features]
default = []
# OTLP exporter — pulls the opentelemetry stack. Completes v0's unfinished #409.
otlp = []

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
