[package]
name = "bitrouter-settlement"
description = "BitRouter settlement plugin: ChargeStrategy chain, SettlementRecorder, BYOK, MPP, MetricsStore"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bitrouter-sdk.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
sha2.workspace = true
base64.workspace = true
hex.workspace = true
sqlx = { workspace = true, optional = true }

[features]
# sqlite is the default backend; metrics store + plugin tables.
default = ["sqlite"]
sqlite = ["dep:sqlx", "sqlx/sqlite"]
postgres = ["dep:sqlx", "sqlx/postgres"]
mysql = ["dep:sqlx", "sqlx/mysql"]
# MPP payment channels. tempo is delivered in v1.0; solana is a placeholder
# (not wired — see 008 §1.1).
mpp-tempo = []
mpp-solana = []

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
